UsuarioPostgresAdapter,UsuarioController,UsuarioEntity integrated rol